# crud-service/api/docs/swagger.json
@@ -234,9 +234,19 @@
     "definitions": {
         "dto.CreateExampleRequest": {
             "type": "object",
+            "required": [
+                "count",
+                "name"
+            ],
             "properties": {
-                "example": {
-                    "$ref": "#/definitions/entities.ExampleEntity"
+                "count": {
+                    "type": "integer",
+                    "minimum": 0
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
                 }
             }
         },
@@ -288,9 +298,19 @@
         },
         "dto.UpdateExampleRequest": {
             "type": "object",
+            "required": [
+                "count",
+                "name"
+            ],
             "properties": {
-                "example": {
-                    "$ref": "#/definitions/entities.ExampleUpdateEntity"
+                "count": {
+                    "type": "integer",
+                    "minimum": 0
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
                 }
             }
         },
@@ -312,20 +332,6 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "entities.ExampleUpdateEntity": {
-            "type": "object",
-            "properties": {
-                "count": {
                     "type": "integer"
                 },
                 "name": {
